// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton component render with prefix 1`] = `
<div>
  <div
    class="RadioButton-root-6"
  >
    <input
      class="RadioButton-input-8"
      id="radio-color-Grey"
      name="color"
      type="radio"
      value="Grey"
    />
    <label
      class="RadioButton-label-9"
      for="radio-color-Grey"
    >
      <div
        style="min-height: 100%; min-width: 72px; background-color: rgb(217, 216, 216);"
      />
      <div
        aria-disabled="false"
        class="MuiButtonBase-root RadioButton-text-10"
        role="button"
        tabindex="-1"
      >
        Grey
        <span
          class="MuiTouchRipple-root"
        />
      </div>
    </label>
  </div>
</div>
`;

exports[`RadioButton component renders correctly 1`] = `
<div>
  <div
    class="RadioButton-root-1"
  >
    <input
      class="RadioButton-input-3"
      id="radio-deckType-Combustible (timber/plywood)"
      name="deckType"
      type="radio"
      value="Combustible (timber/plywood)"
    />
    <label
      class="RadioButton-label-4"
      for="radio-deckType-Combustible (timber/plywood)"
    >
      <div
        aria-disabled="false"
        class="MuiButtonBase-root RadioButton-text-5"
        role="button"
        tabindex="-1"
      >
        Combustible (timber/plywood)
        <span
          class="MuiTouchRipple-root"
        />
      </div>
    </label>
  </div>
</div>
`;
